// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware basic should respect the "stats" option from the configuration in multi-compiler mode and use the "name" option should handle request to bundle file 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /public/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "Child \\"broken\\": ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Child \\"broken\\": Failed to compile.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "Child \\"warning\\": WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Child \\"warning\\": Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Child \\"success\\": Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware basic should respect the "stats" option from the configuration in multi-compiler mode should handle request to bundle file 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /public/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
]
`;

exports[`middleware basic should respect the "stats" option with the "{ all: false, entrypoints: true }" value from the configuration should handle request to bundle file 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /public/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Entrypoint main = bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware basic should respect the "stats" option with the "errors-warnings" value from the configuration should handle request to bundle file 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /public/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Failed to compile.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware basic should respect the "stats" option with the "false" value from the configuration should handle request to bundle file 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /public/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware basic should respect the "stats" option with the "minimal" value from the configuration should handle request to bundle file 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /public/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "X modules",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware basic should respect the "stats" option with the "none" value from the configuration should handle request to bundle file 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /public/bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware logger should log error in "watch" method on startup 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "Error: Error in Watch method",
    ],
  ],
]
`;

exports[`middleware logger should log on successfully build in multi-compiler mode logs 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware logger should log on successfully build logs 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled successfully.",
    ],
  ],
]
`;

exports[`middleware logger should log on unsuccessful build in multi-compiler  logs 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Failed to compile.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Failed to compile.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Failed to compile.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Failed to compile.",
    ],
  ],
]
`;

exports[`middleware logger should log on unsuccessful build logs 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Failed to compile.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "error",
    Array [
      "ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Failed to compile.",
    ],
  ],
]
`;

exports[`middleware logger should log on warning build in multi-compiler mode logs 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
]
`;

exports[`middleware logger should log on warning build logs 1`] = `
Array [
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished: /bundle.js",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiling...",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "wait until bundle finished",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "warn",
    Array [
      "WARNING in Warning",
    ],
  ],
  Array [
    "webpack-dev-middleware",
    "info",
    Array [
      "Compiled with warnings.",
    ],
  ],
]
`;
